# knowagent-personal

./: .gitignore  APP_STORE_CHECKLIST.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  PRIVACY.md  README.md  gen_tray.py  generate_icon.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
chrome-extension/: api_server.py  background.js  content.js  manifest.json  requirements.txt  server.py  styles.css
deploy/: license_server.py
docs/: auto_register.yaml  producthunt.md  promotion-kit.md  social-media-package.md  tech-article-zh.md  tiktok-production.md  vpn_config.md  wechat-promotion.md
electron-app/: entitlements.mac.inherit.plist  entitlements.mac.plist  entitlements.mas.inherit.plist  entitlements.mas.plist  main.js  package-lock.json  package.json  preload.js  sync.js
electron-app/renderer/: ai.js  app.js  index.html  launcher.html  styles.css  workflow.js
electron-app/scripts/: notarize.js
knowagent_personal/: __init__.py  __main__.py  app.py  config.py  main.py
knowagent_personal/agent/: __init__.py  __tools_init__.py  _utils.py  ai_tools.py  aliases.py  clipboard_daemon.py  core.py  daily_tools.py  dev_tools.py  file_tools.py  funnel.py  help_text.py  keychain.py  llm.py  media_tools.py  messaging.py  monitor_tools.py  plugin_tools.py  todo.py  (+4 more)
scripts/: build-mac.sh  demo.sh  generate-posters.py  generate-xiaohongshu.py  generate_demo_gif.py  generate_icons.py  generate_store_assets.py  github-push.sh  menubar.sh  start-menubar.command
swift/: ax_inspector.swift  hotkey.swift  menubar.swift  screen_ocr.swift  timer_window.swift
tests/: TEST_GUIDE.md  TEST_PLAN.md  WORKFLOW_SOP.md  WORKFLOW_TEST_GUIDE.md  run_all.py  test_audit_fixes.py  test_business_modules.py  test_config.py  test_harness.py  test_harness_extras.py  test_integration.py  test_memory.py  test_new_tools.py  test_tool_modules.py  test_tools.py  test_workflow.py
zhixing/: __init__.py  __main__.py  app.py  config.py  main.py  skills_index.json
(+74 files in other folders)
