[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowagent-personal"
version = "0.1.0"
description = "Mac Agent Personal - 本地 Mac 桌面 AI 助手"
authors = [{ name = "KnowAgent" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
voice = ["SpeechRecognition>=3.10.0"]
menubar = ["rumps>=0.4.0"]

[project.scripts]
ka = "knowagent_personal.main:main"

[project.urls]
Homepage = "https://github.com/knowagent/knowagent-personal"
Source = "https://github.com/knowagent/knowagent-personal"
Issues = "https://github.com/knowagent/knowagent-personal/issues"

[tool.setuptools.packages.find]
include = ["knowagent_personal*", "knowagent_personal.plugins*"]

[tool.setuptools.package-data]
knowagent_personal = ["py.typed"]
