[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhixing"
version = "2.0.0"
description = "知行 (ZhiXing) / Flow - 自然语言驱动的 Mac 桌面 AI 自动化助手"
authors = [{ name = "ZhiXing Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
voice = ["SpeechRecognition>=3.10.0"]
menubar = ["rumps>=0.4.0"]

[project.scripts]
zhi = "zhixing.main:main"
flow = "zhixing.main:main"

[project.urls]
Homepage = "https://github.com/zhixing-ai/zhixing"
Source = "https://github.com/zhixing-ai/zhixing"
Issues = "https://github.com/zhixing-ai/zhixing/issues"

[tool.setuptools.packages.find]
include = ["zhixing*", "zhixing.plugins*"]

[tool.setuptools.package-data]
zhixing = ["py.typed", "harness/default_permissions.json"]
